# Cctech

./: .bash_history  .git-credentials  .gitconfig  .gnuplot_history  2dlinesegpara.cpp  CMakeLists.txt  Makefile  README.md  geg2dpara  geg3dpara  graph  graph.cpp  line  plot_3d_line.gp  plot_script.gnu  plot_script.gp  seg2dpara  seg2dpara.cpp  seg3dpara  seg3dpara.cpp
.config/dconf/: user
Beizer/: CMakeLists.txt
Beizer/include/: Bezier.h  GLWidget.h  MainWindow.h
Beizer/src/: Bezier.cpp  GLWidget.cpp  MainWindow.cpp
Extrustion/include/: Extrusion.h  GLWidget.h  MainWindow.h  Structure.h
Extrustion/src/: Extrusion.cpp  GLWidget.cpp  MainWindow.cpp  Structure.cpp  main.cpp
Framework/: Beizer.cpp  CMakeLists.txt  Makefile
Framework/Bezier/include/: Bezier.h  BezierWidget.h  bezierWindow.h
Framework/Bezier/src/: Bezier.cpp  BezierWidget.cpp  bezierWindow.cpp
Framework/Extrusion/include/: ExtWidget.h  Extrusion.h  extrusionWindow.h
Framework/Extrusion/src/: ExtWidget.cpp  Extrusion.cpp  Structure.cpp  extrusionWindow.cpp
Framework/GUIApp/: GUIApp.cpp  GUIApp.rc  GUIApp.sln  GUIApp.vcxproj  GUIApp.vcxproj.filters  Resource.h
Framework/Texteure/include/: GLWidget.h  MainWindow.h
Framework/Texteure/src/: GLWidget.cpp  MainWindow.cpp
Framework/Texteure/textures/: moon.jfif
Framework/application/: Voronoi.cpp  Voronoi.h  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui.autosave  openglwidget.cpp  openglwidget.h
Framework/geometry/include/: Cuboid.h  Geometry.h  Line.h  Plotter.h  Rectangle.h  Robot.h  Shape.h  StlToDat.h  Transformations.h
Framework/geometry/include/Conversions/: FileHandler.h  ObjToStl.h  Triangle.h
Framework/geometry/include/Shapes/: Geometry.h  Plotter.h  Shape.h  Transformations.h
Framework/geometry/scripts/: cone.stl  cuboid.txt  cylinder.stl  points.txt  shape.txt  sphere.stl  transformed.txt
Framework/geometry/src/: Circle.cpp  Cone.cpp  Cuboid.cpp  Cylinder.cpp  Line.cpp  ObjToStl.cpp  Plotter.cpp  Rectangle.cpp  Robot.cpp  Sphere.cpp  StlToDat.cpp  Transformations.cpp
Framework/geometry/src/Conversions/: FileHandler.cpp  ObjToStl.cpp  StlToDat.cpp  StlToObj.cpp
Framework/geometry/src/Shapes/: Beizer.cpp  Circle.cpp  Cone.cpp  Cuboid.cpp  Cylinder.cpp  Line.cpp  Plotter.cpp  Rectangle.cpp  Sphere.cpp  Transformations.cpp
GeometryApp/: CMakeLists.txt
SketcherGUI/: CMakeLists.txt
Skybox/SkyboxProject/: CMakeLists.txt  README.md
Skybox/SkyboxProject/include/: glwidget.h  mainwindow.h
Skybox/SkyboxProject/src/: glwidget.cpp  main.cpp  mainwindow.cpp
Texteure/include/: GLWidget.h  MainWindow.h
Texteure/src/: GLWidget.cpp
VD/: CMakeLists.txt  Voronoi.cpp  Voronoi.h  VoronoiWidget.cpp  VoronoiWidget.h  mainwindow.cpp  mainwindow.h
Voronoi Diagram/: main.cpp
snap/gedit/684/: Makefile  gnuplot_example.cpp  test0.cpp
snap/gedit/684/.config/dconf/: user
snap/gedit/684/.config/gtk-2.0/: gtkfilechooser.ini
snap/gedit/684/.config/gtk-3.0/: bookmarks  gtk.css  settings.ini
snap/gedit/684/.config/ibus/: bus
snap/gedit/684/.local/share/: recently-used.xbel
snap/gedit/684/.local/share/gedit/: gedit-metadata.xml
snap/gedit/684/Desktop/: line.cpp
